# bank

./: .env.local  .flake8  .pre-commit-config.yml  README.md  pyproject.toml
backend/: .env.local  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/bank/: __main__.py  constants.py  settings.py
backend/bank/api/controllers/: transaction.py  user.py
backend/bank/api/dependencies/: __init__.py  services.py
backend/bank/db/: __init__.py  database.py
backend/bank/db/mappings/: base.py  transaction.py
backend/bank/db/migrations/versions/: 96d72460a55e_init_migrations.py
backend/bank/db/repositories/: __init__.py  transaction.py  user.py
backend/bank/services/: base.py  transaction.py  user.py
backend/bank/services/models/: transaction.py  user.py
bank/: __init__.py  __main__.py  settings.py
bank/api/: __init__.py  routers.py
bank/api/controller/: transaction.py  user.py
bank/api/controllers/: __init__.py  account.py  transaction.py  user.py
bank/api/dependencies/: services.py
bank/db/: uow.py
bank/db/mappings/: __init__.py  account.py  base.py  transaction.py  user.py
bank/db/migrations/: env.py
bank/db/migrations/versions/: 96d72460a55e_init_migrations.py
bank/db/repositories/: account.py  base.py  user.py
bank/services/: account.py  base.py  transaction.py  user.py
bank/services/models/: __init__.py  account.py  transaction.py  user.py
bank/tests/: __init__.py
deploy/: Dockerfile
frontend/bank/: package-lock.json  package.json
frontend/bank/app/: _app.tsx  authenticated.tsx  page.tsx
frontend/bank/app/create/: page.tsx
frontend/bank/app/login/: page.tsx
frontend/bank/app/operations/: page.tsx
frontend/bank/app/orders/: page.tsx
frontend/bank/app/services/: account.ts  axiosConfig.ts  transactions.ts  user.ts
frontend/bank/components/: button.tsx  label.tsx  loading.tsx
